@@ -1,3 +1,10 @@
+2000-08-28  Piers Cornwell  <piers.cornwell@bigfoot.com>
+
+	* plug-ins/Lighting/lighting_main.[ch]:
+	* plug-ins/Lighting/lighting_preview.h:
+	* plug-ins/Lighting/lighting_ui.c: Clean up and remove 
+	non-functional zoom buttons.
+
 2000-08-28  Asbjorn Pettersen  <asbjornP@dualog.no>
 
 	* plug-ins/common/gz.c (save_image): FIX OS/2 problem with loading/saving
